--- a/interface.css
+++ b/interface.css
@@ -10,8 +10,8 @@ body {
     width: 50%;
     color: white;
     float:left;
-    height: 50px;
-    line-height:10px;
+    height: 80px;
+    line-height:20px;
 }
 
 .items {
@@ -21,6 +21,17 @@ body {
     line-height: 10px;
     height: 50px;
 }
+
+.right {
+    float: right;
+    width: 50%;
+}
+
+.left {
+    float: left;
+    width: 50%;
+}
+
 .progress {
 	background: #D3D3D3;
 	margin: 10;
